--- a/www/skins/dashboard/css/dashboard-main/icons.css
+++ b/www/skins/dashboard/css/dashboard-main/icons.css
@@ -310,7 +310,7 @@
     color: inherit;
     font-size: 1rem;
     top: 0.1rem;
-    color: #68c700;
+    color: #3cdd4f;
 }
 
 .welcome .system-update .dashboard-title-system::before {
