Remain Logon Page
Signed-off-by: Tony BONNIN <stopyz@gmail.com>

--- a/www/skins/dashboard/css/dashboard-main/dark.css
+++ b/www/skins/dashboard/css/dashboard-main/dark.css
@@ -168,7 +168,7 @@
     width: 100%;
     border: none !important;
     font-size: 0.75rem;
-    background: #171f28 !important;
+    background: #222222 !important;
     padding: 0.25rem 0;
 }
 
