Remain Logon Page
Signed-off-by: Tony BONNIN <stopyz@gmail.com>

--- a/www/skins/dashboard/css/dashboard-main/dark.css
+++ b/www/skins/dashboard/css/dashboard-main/dark.css
@@ -29,7 +29,7 @@
 }
 
 .dark-theme .header-logo {
-	background-image: url(../../img/logos/logo-trinity-full-acf-white.png) no-repeat !important;
+	background-image: url(../../img/logos/logo-trinity-dashboard.png) !important;
 }
 
 .dark-theme tbody {
