Remain Logon Page
Signed-off-by: Tony BONNIN <stopyz@gmail.com>

--- a/www/skins/dashboard/css/dashboard-main/dark.css
+++ b/www/skins/dashboard/css/dashboard-main/dark.css
@@ -28,7 +28,8 @@
     box-shadow: none !important;
 }
 
-.dark-theme .header-logo {
+.dark-theme .header-logo,
+.dark-theme .logon-logon #header {
 	background-image: url(../../img/logos/logo-trinity-dashboard.png) !important;
 }
 
