--- a/www/skins/dashboard/css/dashboard-main/icons.css
+++ b/www/skins/dashboard/css/dashboard-main/icons.css
@@ -169,7 +169,7 @@
     position: relative;
     font-size: 1.5rem;
     top: 1.5rem;
-    background: #5a329f;
+    background: #6300d2;
     padding: 1.5rem;
     border-radius: 8rem;
 }
@@ -183,7 +183,7 @@
     position: relative;
     font-size: 1.5rem;
     top: 1.5rem;
-    background: #5a329f;
+    background: #6300d2;
     padding: 1.5rem;
     border-radius: 8rem;
 }
