--- a/www/skins/dashboard/css/dashboard-main/icons.css
+++ b/www/skins/dashboard/css/dashboard-main/icons.css
@@ -357,7 +357,7 @@
 	display: inline-block;
     margin: 0 0.5rem 0 0;
     font-size: 1rem;
-    color: #00cbb4;
+    color: #00bac9;
 }
 
 .welcome .dashboard-title-network-stats::before {
