Improve Template & Map Design
Signed-off-by: Tony BONNIN <stopyz@gmail.com>

--- a/www/skins/dashboard/css/dashboard-main/mobile.css
+++ b/www/skins/dashboard/css/dashboard-main/mobile.css
@@ -296,7 +296,12 @@
     padding: 0rem 0.1rem !important;
 	}
 	
+	.legend-title {
+    font-size: 0.65rem;
+	}
+	
 	#disk-listing {
+	width: 100% !important;
     height: 9rem !important;
 	}
 	
